crates/au-cli/tests/it/snapshots/it__scenarios__value-refinement-out-of-range.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "value-out-of-refinement",
      "message": "field 'depth' value -1 is not >= 0",
      "related": [
        {
          "file": "<root>/scenarios/value-refinement-out-of-range/type/gauge.type.yaml",
          "line_col": {
            "end": {
              "col": 33,
              "line": 2
            },
            "start": {
              "col": 10,
              "line": 2
            }
          },
          "range": {
            "end": 40,
            "start": 17
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/value-refinement-out-of-range/gauge-bad.md",
        "line_col": {
          "end": {
            "col": 10,
            "line": 3
          },
          "start": {
            "col": 8,
            "line": 3
          }
        },
        "range": {
          "end": 25,
          "start": 23
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 35,
                        "line_col": {
                          "end": {
                            "col": 36,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/value-refinement-out-of-range/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "value-refinement-out-of-range"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "value-refinement-out-of-range"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/value-refinement-out-of-range/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "gauge"
        ],
        "closure": [
          "gauge"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "depth",
            "origins": [
              {
                "name": "gauge",
                "origin_path": "<root>/scenarios/value-refinement-out-of-range/type/gauge.type.yaml",
                "required": true,
                "shape": "Number{>=0 & integer}"
              }
            ],
            "required": true,
            "shape": "Number{>=0 & integer}"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 25,
                        "line_col": {
                          "end": {
                            "col": 10,
                            "line": 3
                          },
                          "start": {
                            "col": 8,
                            "line": 3
                          }
                        },
                        "start": 23
                      },
                      "file": "<root>/scenarios/value-refinement-out-of-range/gauge-bad.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": -1
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": -1
                }
              }
            ],
            "field": "depth"
          }
        ],
        "file": "<root>/scenarios/value-refinement-out-of-range/gauge-bad.md",
        "section_presence": null
      }
    ]
  }
}
