crates/au-cli/tests/it/snapshots/it__scenarios__wikilink-fragment-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 3,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 29,
                        "line_col": {
                          "end": {
                            "col": 30,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/wikilink-fragment-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "wikilink-fragment-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "wikilink-fragment-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/wikilink-fragment-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "wikilink",
            "parsed": {
              "anchor": null,
              "block_id": null,
              "commit": null,
              "field": "rationale",
              "repo": null,
              "target": "my-rationale"
            },
            "raw": "my-rationale:rationale",
            "span": {
              "end": 131,
              "line_col": {
                "end": {
                  "col": 57,
                  "line": 7
                },
                "start": {
                  "col": 31,
                  "line": 7
                }
              },
              "start": 105
            }
          },
          {
            "content": "rationale",
            "kind": "inline_code",
            "span": {
              "end": 196,
              "line_col": {
                "end": {
                  "col": 52,
                  "line": 8
                },
                "start": {
                  "col": 41,
                  "line": 8
                }
              },
              "start": 185
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/wikilink-fragment-clean/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "rationale",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/wikilink-fragment-clean/type/decision.type.yaml",
                "required": false,
                "shape": "rationale*"
              }
            ],
            "required": false,
            "shape": "rationale*"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/wikilink-fragment-clean/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 131,
                        "line_col": {
                          "end": {
                            "col": 57,
                            "line": 7
                          },
                          "start": {
                            "col": 31,
                            "line": 7
                          }
                        },
                        "start": 105
                      },
                      "file": "<root>/scenarios/wikilink-fragment-clean/decision.md"
                    },
                    "section_path": [],
                    "surface": "body_wikilink",
                    "value": {
                      "anchor": null,
                      "block_id": null,
                      "kind": "reference",
                      "target": "my-rationale"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": null,
                  "kind": "reference",
                  "target": "my-rationale"
                }
              }
            ],
            "field": "rationale"
          }
        ],
        "file": "<root>/scenarios/wikilink-fragment-clean/decision.md",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "rationale"
        ],
        "closure": [
          "rationale"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "rationale",
                "origin_path": "<root>/scenarios/wikilink-fragment-clean/type/rationale.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 69,
                        "line_col": {
                          "end": {
                            "col": 50,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 33
                      },
                      "file": "<root>/scenarios/wikilink-fragment-clean/my-rationale.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Shared-volume contention dominates"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Shared-volume contention dominates"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/wikilink-fragment-clean/my-rationale.md",
        "section_presence": null
      }
    ]
  }
}
